# try-llvm-cov

./: Cargo.toml  README.md  config.yaml  justfile
src/: lib.rs
